fix(device-service): verifica se o status do device é null 1. Foi adicionada uma validação para verificar se o status do device é null, evitando causar NullPointerEx